--- a/dep-chart/Chart.yaml
+++ b/dep-chart/Chart.yaml
@@ -2,6 +2,6 @@ apiVersion: v2
 name: "DepTest"
 version: 0.0.1
 dependencies:
-- name: nginx
-  version: "1.2.3"
-  repository: "https://example.com/charts"
+- name: mysql
+  version: "8.5.8"
+  repository: "https://charts.bitnami.com/bitnami"
